# omnilabeltools

./: .gitignore  LICENSE  README.md  omnilabel_demo.ipynb  pyproject.toml  setup.cfg
omnilabeltools/: __init__.py  eval.py  omnilabel.py  stats.py  visualize.py
tests/: 8357.json  test_evaluation.py
